--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "jest",
-    "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "start": "parcel src/index.html",
+    "build": "parcel build src/index.html"
   },
   "repository": {
     "type": "git",
